create controller the styles, and modified opencode the bootstrap, create new class for colors primary, second, third, and font-family to Roboto, development nav and footer partials

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,14 @@
  *= require hover
  *= require font-awesome
  */
+@import "bootstrap_override";
 @import "bootstrap";
 @import 'hover';
- @import "font-awesome";
+@import "font-awesome";
+
+/*Styles Bootstrap*/
+@import "styles";
+
+/*Styles Nav and Footer*/
+@import "nav";
+@import "footer";
