--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,5 +1,17 @@
-<div class="row">
-	<div class="col">
-		<h1>NavBar</h1>
-	</div>
-</div>
+<nav id="nav-home" class="navbar navbar-expand-sm  navbar-light justify-content-around fixed-top">
+  <!-- Brand/logo -->
+  <a class=" text-second p-2 navbar-brand" href="#">Vaico</a>
+  
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Servicios</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Trabajos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Tecnologia</a>
+    </li>
+  </ul>
+</nav>
