--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,5 +1,46 @@
-<div class="row">
-	<div class="col">
-		<h1>Footer</h1>
+<section class="section__footer text-white bg-third">
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<br><br>
+				<div class="justify-content-between">
+					<p>Do you want know more or just have a question? Write to us.</p>
+					<button class="btn btn-second">Contactenos</button>					
+				</div>
+				<hr class="border">
+			</div>
+		</div>
+		<br>
+		<div class="row">
+			<div class="col-md-3 text-second">
+				<h1>Vaico</h1>
+			</div>
+			<div class="col-md-3 text-primary">
+				<p class="lead">
+					MENU
+				</p>	
+				<a class="text-white" href="#">Home</a><br>
+				<a class="text-white" href="#">Servicios</a><br>
+				<a class="text-white" href="#">Casos de Estudio</a><br>
+				<a class="text-white" href="#">COntacto</a>	
+			</div>
+			<div class="col-md-3 text-primary">
+				<p class="lead">
+					SOCIAL
+				</p>
+				<a class="text-white" href="#">Facebook</a><br>
+				<a class="text-white" href="#">Instagram</a>
+			</div>
+			<div class="col-md-3 text-primary">
+				<p class="lead">CONTACTO</p>
+				<a class="text-white" href="#">Vaico@gmail.com</a>
+				<a class="text-white" href="#">+57 1234 56 78</a>
+				<p class="text-white">Bogotá - Colombia</p>
+				<p class="text-white">Calle 26a N 13 97 of 1605</p>
+			</div>
+		</div>
 	</div>
-</div>
+</section>
+<section class="copy text-center text-white">
+	<p>Todos los derechos reservados <b>VAICO 2019</b></p>
+</section>
