--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -41,6 +41,6 @@
 		</div>
 	</div>
 </section>
-<section class="copy text-center text-white">
+<section class="bg-third text-center text-white">
 	<p>Todos los derechos reservados <b>VAICO 2019</b></p>
 </section>
