--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -7,3 +7,12 @@
 		</div>
 	</div>
 </section>
+
+<div class="slider">
+	<ul>
+		<li><img src="https://image.freepik.com/foto-gratis/fondo-hojas-verdes-tropicales_53876-88891.jpg" alt=""></li>
+		<li><img src="https://image.freepik.com/foto-gratis/fondo-hojas-verdes-tropicales_53876-88891.jpg" alt=""></li>
+		<li><img src="https://image.freepik.com/foto-gratis/fondo-hojas-verdes-tropicales_53876-88891.jpg" alt=""></li>
+		<li><img src="https://image.freepik.com/foto-gratis/fondo-hojas-verdes-tropicales_53876-88891.jpg" alt=""></li>
+	</ul>
+</div>
