--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -1,7 +1,16 @@
-<div class="container">
-	<div class="row">
-		<div class="col">
-			<h1>About</h1>
+<section class="section__home-about text-third">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<div class="container-text">
+					<h1>¿Que hacemos?</h1>	
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur quibusdam quasi ullam optio quae blanditiis necessitatibus enim quaerat reprehenderit minima expedita nemo rerum, ea at odit aliquam distinctio soluta maiores Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur aliquid architecto, quam, delectus aperiam consequuntur fugiat voluptates, dolore similique ullam repudiandae amet veniam praesentium? Recusandae delectus itaque odit ut autem? </p>
+					<button class="btn btn-primary">Conoce más</button>						
+				</div>
+			</div>
+			<div class="col-md-6 border">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit consectetur, veniam quis qui eveniet accusamus, illo praesentium excepturi, voluptate recusandae ea consequuntur voluptates at quibusdam sed sunt. Enim facilis, mollitia.
+			</div>
 		</div>
 	</div>
-</div>
+</section>
