--- a/app/views/pages/_section.html.erb
+++ b/app/views/pages/_section.html.erb
@@ -1,7 +1,42 @@
-<div class="container">
-	<div class="row">
-		<div class="col">
-			<h1>Section</h1>
+<section class="section__home-customers text-center">
+	<div class="container">
+		<div class="row">
+			<div class="col">
+				<div class="container-text">
+					<h1>Nuestros Clientes</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore nisi ea asperiores eius mollitia reprehenderit maxime hic atque .</p>					
+				</div>
+			</div>
+		</div>
+		<br>
+		<div class="row">
+			<div class="col-md-3">
+				<%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>
+			</div>
+			<div class="col-md-3">
+				<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
+			</div>
+			<div class="col-md-3">
+				<%= image_tag("customers/Mincomercio_Colombia.svg", class: "img-fluid") %>
+			</div>
+			<div class="col-md-3">
+				<%= image_tag("customers/logo-utp.png", class: "img-fluid") %>
+			</div>
+		</div>
+		<br><br>
+		<div class="row">
+			<div class="col-md-3">
+				<%= image_tag("customers/logo-vector-tigo-une.jpg", class: "img-fluid") %>
+			</div>
+			<div class="col-md-3 pt-4">
+				<%= image_tag("customers/logo-homesquad.png", class: "img-fluid") %>
+			</div>
+			<div class="col-md-3">
+				<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
+			</div>
+			<div class="col-md-3">
+				<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
+			</div>				
 		</div>
 	</div>
-</div>
+</section>
