--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -1,3 +1,58 @@
 // Place all the styles related to the Components controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.slider{
+	width: 95%;
+	margin: auto;
+	overflow:hidden; 
+	ul{
+		display: flex;
+		padding: 0;
+		width: 400%;
+
+		animation: cambio 20s infinite;
+		animation-direction: alternate; 
+		animation-timing-function: linear;
+		li{
+			width: 100%;
+			list-style: none;
+			img{
+				width: 100%;
+				height: 100%;
+			}
+		}
+
+	}
+}
+
+@keyframes cambio{
+	0%{
+		margin-left: 0;
+	}
+	20%{
+		margin-left: 0;
+	}
+	25%{
+		margin-left: -100%;
+	}
+	45%{
+		margin-left: -100%;
+	}
+
+	50%{
+		margin-left: -200%;
+	}
+	70%{
+		margin-left: -200%;
+	}
+
+	55%{
+		margin-left: -300%;
+	}
+	100%{
+		margin-left: -300%;
+	}
+
+}
