--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,17 +1,25 @@
-<nav id="nav-home" class="navbar navbar-expand-sm  navbar-light justify-content-around fixed-top">
-  <!-- Brand/logo -->
-  <a class=" text-second p-2 navbar-brand" href="#">Vaico</a>
-  
-  <!-- Links -->
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#">Servicios</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Trabajos</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Tecnologia</a>
-    </li>
-  </ul>
+<nav id="nav-home" class="navbar navbar-expand-sm  navbar-light justify-content-between fixed-top">
+  <div class="container">
+    <!-- Brand/logo -->
+    <a class=" text-second p-2 navbar-brand" href="#">Vaico</a>
+    
+    <!-- Links -->
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Servicios</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Trabajos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Tecnologia</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Blog</a>
+      </li>
+      <li class="nav-item">
+        <a class="btn btn-outline-primary" href="#">Contactanos</a>
+      </li>
+    </ul>    
+  </div>
 </nav>
