--- a/app/views/pages/_hero.html.erb
+++ b/app/views/pages/_hero.html.erb
@@ -1,7 +1,17 @@
-<div class="container">
-	<div class="row">
-		<div class="col">
-			<h1>Hero</h1>
+<section class="section__home-hero text-third">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<div class="container-text">
+					<h3>Web mobile and Softwhere Development Solutions for All Your Entrerprise Needs</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, magni, earum molestiae id vero sit praesentium. Et aut, molestias inventore. Perferendis impedit id, perspiciatis similique non error inventore, corporis soluta?</p>
+					<br>
+					<button class="btn btn-primary">Cuentanos tu proyecto</button>
+				</div>
+			</div>
+			<div class="col-md-6">
+				<h1>Imagen</h1>
+			</div>
 		</div>
 	</div>
-</div>
+</section>
