--- a/app/assets/stylesheets/home/customers.sass
+++ b/app/assets/stylesheets/home/customers.sass
@@ -2,3 +2,26 @@
 	height: 500px
 	.container-text
 		margin: 40px
+
+/* ===================== Responsive Movil ============================ */
+
+@media screen and (max-width:480px)
+	.section__home-customers
+		height: auto
+		margin: 10px 0px
+		.col-md-3
+			margin: 20px 0px
+		img 
+			width: 60%
+/*====================== Responsive Laptop ===========================*/
+@media screen and (max-width:1024px) and(min-width: 769px)
+
+
+/*========================Responsive Tablets=============================*/
+@media screen and (max-width:768px) and (min-width: 481px)
+	.section__home-customers
+		h1
+			font-size: xx-large
+		p
+			font-size: smaller
+			
