--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,25 +1,54 @@
-<nav id="nav-home" class="navbar navbar-expand-sm  navbar-light justify-content-between fixed-top">
-  <div class="container">
-    <!-- Brand/logo -->
-    <a class=" text-second p-2 navbar-brand" href="#">Vaico</a>
-    
-    <!-- Links -->
+<nav id="nav-home" class="navbar navbar-expand-sm  fixed-top navbar-light remove-efect-nav-dark ">
+<div id="effect-container-nav" class="bg-third"></div>
+  <!-- Brand/logo -->
+  <a class=" text-second p-2 navbar-brand" href="#">Vaico</a>
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Servicios</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Trabajos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Tecnologia</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Blog</a>
+    </li>
+    <li class="nav-item">
+      <a class="btn btn-outline-primary" href="#">Contactanos</a>
+    </li>
+  </ul>    
+</nav>
+
+<nav id="nav-movil" class="navbar navbar-expand-sm  fixed-top navbar-dark bg-third ">
+  <!-- Brand -->
+  <a class=" text-second p-2 navbar-brand" href="#">Vaico</a>
+
+  <!-- Toggler/collapsibe Button -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- Navbar links -->
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Servicios</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Trabajos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Tecnologia</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
-      </li>
-      <li class="nav-item">
-        <a class="btn btn-outline-primary" href="#">Contactanos</a>
-      </li>
-    </ul>    
-  </div>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Servicios</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Trabajos</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Tecnologia</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Blog</a>
+    </li>
+    <li class="nav-item">
+      <a class="btn btn-outline-primary" href="#">Contactanos</a>
+    </li>
+  </ul>    
+  </div> 
 </nav>
