--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -8,8 +8,41 @@
 					<button class="btn btn-primary">Conoce más</button>						
 				</div>
 			</div>
-			<div class="col-md-6 border">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit consectetur, veniam quis qui eveniet accusamus, illo praesentium excepturi, voluptate recusandae ea consequuntur voluptates at quibusdam sed sunt. Enim facilis, mollitia.
+			<div class="col-md-6 ">
+				<div class="row">
+					<div class="col-md-4 col-sm-12">
+						<div class="container-icon">
+							<%= image_tag("http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/applications-development-icon.png", class: "img-fluid") %>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-12">
+						<div class="container-icon">
+							<%= image_tag("http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/applications-development-icon.png", class: "img-fluid") %>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-12">
+						<div class="container-icon">
+							<%= image_tag("http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/applications-development-icon.png", class: "img-fluid") %>							
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-4 col-sm-12">
+						<div class="container-icon">
+							<%= image_tag("http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/applications-development-icon.png", class: "img-fluid") %>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-12">
+						<div class="container-icon">
+							<%= image_tag("http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/applications-development-icon.png", class: "img-fluid") %>
+						</div>
+					</div>
+					<div class="col-md-4 col-sm-12">
+						<div class="container-icon">
+							<%= image_tag("http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/applications-development-icon.png", class: "img-fluid") %>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
