--- a/app/views/pages/_uses_cases.html.erb
+++ b/app/views/pages/_uses_cases.html.erb
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<div class="container-text">
+				<div class="container-text text-third">
 					<h1>Casos de uso</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque iusto et doloribus dolorum ab cumque, excepturi vitae nisi eos dolore nulla iste quasi accusamus ipsa ipsum officia minus iure error.</p>
 				</div>
@@ -20,8 +20,8 @@
 				    		</div>
 				    		<div class="col-md-6">
 						      <div class="">
-						        <h3>Los Angeles</h3>
-						        <p>We had such a great time in LA!</p>
+						        <h3>Bogota Piensa Digital</h3>
+						        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita amet corrupti delectus, est rem ipsam facilis quisquam vero, ab molestiae provident veritatis voluptas. Vero itaque optio qui suscipit, et corporis?</p>
 						      </div>   				    			
 				    		</div>
 				    	</div>
@@ -33,8 +33,8 @@
 				    		</div>
 				    		<div class="col-md-6">
 						      <div class="">
-						        <h3>Los Angeles</h3>
-						        <p>We had such a great time in LA!</p>
+						        <h3>Bogota Piensa Digital</h3>
+						        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita amet corrupti delectus, est rem ipsam facilis quisquam vero, ab molestiae provident veritatis voluptas. Vero itaque optio qui suscipit, et corporis?</p>
 						      </div>   				    			
 				    		</div>
 				    	</div>
@@ -46,8 +46,8 @@
 				    		</div>
 				    		<div class="col-md-6">
 						      <div class="">
-						        <h3>Los Angeles</h3>
-						        <p>We had such a great time in LA!</p>
+						        <h3>Bogota Piensa Digital</h3>
+						        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita amet corrupti delectus, est rem ipsam facilis quisquam vero, ab molestiae provident veritatis voluptas. Vero itaque optio qui suscipit, et corporis?</p>
 						      </div>   				    			
 				    		</div>
 				    	</div>
@@ -59,8 +59,8 @@
 				    		</div>
 				    		<div class="col-md-6">
 						      <div class="">
-						        <h3>Los Angeles</h3>
-						        <p>We had such a great time in LA!</p>
+						        <h3>Bogota Piensa Digital</h3>
+						        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita amet corrupti delectus, est rem ipsam facilis quisquam vero, ab molestiae provident veritatis voluptas. Vero itaque optio qui suscipit, et corporis?</p>
 						      </div>   				    			
 				    		</div>
 				    	</div>
@@ -72,8 +72,8 @@
 				    		</div>
 				    		<div class="col-md-6">
 						      <div class="">
-						        <h3>Los Angeles</h3>
-						        <p>We had such a great time in LA!</p>
+						        <h3>Bogota Piensa Digital</h3>
+						        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita amet corrupti delectus, est rem ipsam facilis quisquam vero, ab molestiae provident veritatis voluptas. Vero itaque optio qui suscipit, et corporis?</p>
 						      </div>   				    			
 				    		</div>
 				    	</div>
@@ -85,41 +85,58 @@
 				    		</div>
 				    		<div class="col-md-6">
 						      <div class="">
-						        <h3>Los Angeles</h3>
-						        <p>We had such a great time in LA!</p>
+						        <h3>Bogota Piensa Digital</h3>
+						        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita amet corrupti delectus, est rem ipsam facilis quisquam vero, ab molestiae provident veritatis voluptas. Vero itaque optio qui suscipit, et corporis?</p>
 						      </div>   				    			
 				    		</div>
 				    	</div>
 				    </div>
 				  </div>
-				  <a class="carousel-control-prev" href="#demo" data-slide="prev"></a>
-				  <a class="carousel-control-next" href="#demo" data-slide="next"></a>
-			  	<div class="slider">
-				  <ul class="carousel-indicators">
-					    <li data-target="#demo" data-slide-to="0" class="active">
-							  <%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>	
-					    </li>
-					    <li data-target="#demo" data-slide-to="1">
-					    	<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
-					    </li>
-					    <li data-target="#demo" data-slide-to="2">
-					    	<%= image_tag("customers/Mincomercio_Colombia.svg", class: "img-fluid") %>
-					    </li>
-					    <li data-target="#demo" data-slide-to="3">
-					    	<%= image_tag("customers/logo-utp.png", class: "img-fluid") %>
-					    </li>
-					    <li data-target="#demo" data-slide-to="4">
-							  <%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>	   
-					    </li>
-					    <li data-target="#demo" data-slide-to="5">
-					    	<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
-					    </li>
-					  </ul>
-			  		
-			  	</div>
+				  <a class="carousel-control-prev" href="#demo" data-slide="prev"><span class="carousel-control-prev-icon"></span></a>
+				  <a class="carousel-control-next" href="#demo" data-slide="next"><span class="carousel-control-next-icon"></span></a>
 				</div>
 			</div>
 		</div>
+		<div class="slider">
+			<ul class="carousel-indicators">
+				<li data-target="#demo" data-slide-to="0" class="active">
+				  <%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>	
+				</li>
+				<li data-target="#demo" data-slide-to="1">
+				 	<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
+				</li>
+				<li data-target="#demo" data-slide-to="2">
+				 	<%= image_tag("customers/Mincomercio_Colombia.svg", class: "img-fluid") %>
+				</li>
+				<li data-target="#demo" data-slide-to="3">
+				 	<%= image_tag("customers/logo-utp.png", class: "img-fluid") %>
+				</li>
+				<li data-target="#demo" data-slide-to="4">
+				<%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>	   
+				</li>
+				<li data-target="#demo" data-slide-to="5">
+				 	<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
+				</li>
+
+				<li data-target="#demo" data-slide-to="0" class="active">
+				  <%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>	
+				</li>
+				<li data-target="#demo" data-slide-to="1">
+				 	<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
+				</li>
+				<li data-target="#demo" data-slide-to="2">
+				 	<%= image_tag("customers/Mincomercio_Colombia.svg", class: "img-fluid") %>
+				</li>
+				<li data-target="#demo" data-slide-to="3">
+				 	<%= image_tag("customers/logo-utp.png", class: "img-fluid") %>
+				</li>
+				<li data-target="#demo" data-slide-to="4">
+				<%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>	   
+				</li>
+				<li data-target="#demo" data-slide-to="5">
+				 	<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
+				</li>
+			</ul>
+		</div>
 	</div>
 </section>
-
