--- a/app/assets/stylesheets/home/about.sass
+++ b/app/assets/stylesheets/home/about.sass
@@ -1,6 +1,34 @@
 .section__home-about
-	border: 2px solid red
 	height: 400px
 	display: flex
 	justify-content: center
 	flex-direction: column
+	.container-icon
+		max-width: 100%
+		max-height: 100%
+		img
+			max-width: 100%
+
+/* ===================== Responsive Movil ============================ */
+
+@media screen and (max-width:480px)
+	.section__home-about
+		height: auto
+		margin: 100px 0px
+		text-align: center
+		.col-sm-12
+			margin: 20px 0px
+			img
+				width: 50%
+
+/*====================== Responsive Laptop ===========================*/
+@media screen and (max-width:1024px) and(min-width: 769px)
+
+
+/*========================Responsive Tablets=============================*/
+@media screen and (max-width:768px) and (min-width: 481px)
+	.section__home-about
+		h1
+		 font-size: xx-large
+		p
+			font-size: smaller
