--- a/app/views/pages/_customers.html.erb
+++ b/app/views/pages/_customers.html.erb
@@ -2,39 +2,39 @@
 	<div class="container">
 		<div class="row">
 			<div class="col">
-				<div class="container-text">
+				<div class="container-text text-third">
 					<h1>Nuestros Clientes</h1>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore nisi ea asperiores eius mollitia reprehenderit maxime hic atque .</p>					
 				</div>
 			</div>
 		</div>
 		<br>
-		<div class="row">
-			<div class="col-md-3">
+		<div class="row ">
+			<div class="col-md-3 col-sm-12">
 				<%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-sm-12">
 				<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-sm-12">
 				<%= image_tag("customers/Mincomercio_Colombia.svg", class: "img-fluid") %>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-sm-12">
 				<%= image_tag("customers/logo-utp.png", class: "img-fluid") %>
 			</div>
 		</div>
 		<br><br>
-		<div class="row">
-			<div class="col-md-3">
+		<div class="row ">
+			<div class="col-md-3 col-sm-12">
 				<%= image_tag("customers/logo-vector-tigo-une.jpg", class: "img-fluid") %>
 			</div>
-			<div class="col-md-3 pt-4">
+			<div class="col-md-3 col-sm-12">
 				<%= image_tag("customers/logo-homesquad.png", class: "img-fluid") %>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-sm-12">
 				<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-3 col-sm-12">
 				<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
 			</div>				
 		</div>
