--- a/app/assets/stylesheets/home/hero.sass
+++ b/app/assets/stylesheets/home/hero.sass
@@ -3,6 +3,10 @@
 	display: flex
 	justify-content: center
 	flex-direction: column
+	background-image: asset_url("hero/hero_bg.png")
+	background-repeat: no-repeat 
+	background-position: right
+	
 
 
 
@@ -10,7 +14,8 @@
 
 @media screen and (max-width:480px)
 	.section__home-hero
-		margin: 80px 0px
+		margin: 60px 0px
+		padding-top: 20px
 		height: auto
 		img
 			margin: 50px 0px
