--- a/app/assets/stylesheets/home/uses-cases.sass
+++ b/app/assets/stylesheets/home/uses-cases.sass
@@ -2,7 +2,13 @@
 	height: auto
 	.container-text
 		margin: 20px 0px
-		
+	
+	.col-md-6
+		.container-text
+			display: flex
+			justify-content: center
+			flex-direction: column
+			height: 300px
 	.carousel-indicators
 		position: relative
 		margin-left: 0px
