--- a/app/assets/stylesheets/nav.sass
+++ b/app/assets/stylesheets/nav.sass
@@ -1,8 +1,8 @@
 #effect-container-nav
 	position: absolute
-	width: 60px
+	width: 70px
 	height: 3000px
-	left: -60px
+	left: -69px
 	z-index: -100
 	border: none
 	margin: 0
@@ -23,6 +23,9 @@
 	display: flex
 	justify-content: space-between
 	background-color: transparent
+
+.logo
+	width: 75px
 
 #nav-movil
 	display: none
