--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,7 +1,9 @@
 <nav id="nav-home" class="navbar navbar-expand-sm  fixed-top navbar-light remove-efect-nav-dark ">
 <div id="effect-container-nav" class="bg-third"></div>
   <!-- Brand/logo -->
-  <a class=" text-second p-2 navbar-brand" href="#">Vaico</a>
+  <a class=" text-second p-2 navbar-brand" href="#">
+    <%= image_tag("logo_vaico.png", class: "img-fluid logo") %>
+  </a>
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
@@ -17,7 +19,7 @@
       <a class="nav-link" href="#">Blog</a>
     </li>
     <li class="nav-item">
-      <a class="btn btn-outline-primary" href="#">Contactanos</a>
+      <a class="ml-3 btn btn-outline-primary" href="#">Contactanos</a>
     </li>
   </ul>    
 </nav>
