--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -2,45 +2,52 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<div class="container-text">
+				<div class="container-text p-3">
 					<h1>¿Que hacemos?</h1>	
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur quibusdam quasi ullam optio quae blanditiis necessitatibus enim quaerat reprehenderit minima expedita nemo rerum, ea at odit aliquam distinctio soluta maiores Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur aliquid architecto, quam, delectus aperiam consequuntur fugiat voluptates, dolore similique ullam repudiandae amet veniam praesentium? Recusandae delectus itaque odit ut autem? </p>
 					<button class="btn btn-primary">Conoce más</button>						
 				</div>
 			</div>
-			<div class="col-md-6 ">
+			<div class="col-md-6 container-icons">
 				<div class="row">
 					<div class="col-md-4 col-sm-12">
 						<div class="container-icon">
-							<%= image_tag("http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/applications-development-icon.png", class: "img-fluid") %>
+							<%= image_tag("about/estrategia.png", class: "img-fluid") %> 
 						</div>
+						<p class= "text-second">Estrategia y diseño de productos</p>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<div class="container-icon">
-							<%= image_tag("http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/applications-development-icon.png", class: "img-fluid") %>
+							<%= image_tag("about/games.png", class: "img-fluid") %> <br>
 						</div>
+						<p class="text-second">Desarrollo de Softwhere</p>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<div class="container-icon">
-							<%= image_tag("http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/applications-development-icon.png", class: "img-fluid") %>							
+							<%= image_tag("about/dev.png", class: "img-fluid") %>							
 						</div>
+						<p class="text-second">Desarrollo de Video Juegos</p>
 					</div>
 				</div>
+				<br>
 				<div class="row">
 					<div class="col-md-4 col-sm-12">
 						<div class="container-icon">
-							<%= image_tag("http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/applications-development-icon.png", class: "img-fluid") %>
+							<%= image_tag("about/marketing.png", class: "img-fluid") %>
 						</div>
+						<p class="text-second">Desarrollo de APP Moviles</p>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<div class="container-icon">
-							<%= image_tag("http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/applications-development-icon.png", class: "img-fluid") %>
+							<%= image_tag("about/moviles.png", class: "img-fluid") %>
 						</div>
+						<p class="text-second">Consultoria de Redes</p>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<div class="container-icon">
-							<%= image_tag("http://icons.iconarchive.com/icons/papirus-team/papirus-apps/256/applications-development-icon.png", class: "img-fluid") %>
+							<%= image_tag("about/network.png", class: "img-fluid") %>
 						</div>
+						<p class="text-second">Marketing y Transformacion Digial</p>
 					</div>
 				</div>
 			</div>
