--- a/app/views/pages/_customers.html.erb
+++ b/app/views/pages/_customers.html.erb
@@ -4,38 +4,38 @@
 			<div class="col">
 				<div class="container-text text-third">
 					<h1>Nuestros Clientes</h1>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore nisi ea asperiores eius mollitia reprehenderit maxime hic atque .</p>					
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore nisi ea asperiores eius mollitia reprehenderit maxime hic atque.</p>					
 				</div>
 			</div>
 		</div>
 		<br>
 		<div class="row ">
 			<div class="col-md-3 col-sm-12">
-				<%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>
+				<%= image_tag("customers/apc_logo.png", style: "height: 40px",class: "img-fluid") %>
+			</div>
+			<div class="col-md-3 col-sm-12 ">
+				<%= image_tag("customers/giz-logo.png", style: "height: 55px",class: "img-fluid") %>
 			</div>
 			<div class="col-md-3 col-sm-12">
-				<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
+				<%= image_tag("customers/hos_logo.png",class: "img-fluid") %>
 			</div>
 			<div class="col-md-3 col-sm-12">
-				<%= image_tag("customers/Mincomercio_Colombia.svg", class: "img-fluid") %>
-			</div>
-			<div class="col-md-3 col-sm-12">
-				<%= image_tag("customers/logo-utp.png", class: "img-fluid") %>
+				<%= image_tag("customers/hs_logo.png", style: "height: 20px",class: "img-fluid") %>
 			</div>
 		</div>
 		<br><br>
 		<div class="row ">
 			<div class="col-md-3 col-sm-12">
-				<%= image_tag("customers/logo-vector-tigo-une.jpg", class: "img-fluid") %>
+				<%= image_tag("customers/logo_fede.png", style: "height: 50px",class: "img-fluid") %>
 			</div>
 			<div class="col-md-3 col-sm-12">
-				<%= image_tag("customers/logo-homesquad.png", class: "img-fluid") %>
+				<%= image_tag("customers/logo_utp.png",style: "height: 50px" ,class: "img-fluid") %>
 			</div>
 			<div class="col-md-3 col-sm-12">
-				<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
+				<%= image_tag("customers/mintic_logo.png", style: "height: 40px",class: "img-fluid") %>
 			</div>
 			<div class="col-md-3 col-sm-12">
-				<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
+				<%= image_tag("customers/ptp_logo.png", class: "img-fluid") %>
 			</div>				
 		</div>
 	</div>
