--- a/app/views/pages/_hero.html.erb
+++ b/app/views/pages/_hero.html.erb
@@ -2,15 +2,15 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 col-sm-12">
-				<div class="container-text">
+				<div class="container-text pt-5">
 					<h3>Web mobile and Softwhere Development Solutions for All Your Entrerprise Needs</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, magni, earum molestiae id vero sit praesentium. Et aut, molestias inventore. Perferendis impedit id, perspiciatis similique non error inventore, corporis soluta?</p>
 					<br>
 					<button class="btn btn-primary">Cuentanos tu proyecto</button>
 				</div>
 			</div>
-			<div class="col-md-6 col-sm-12">
-				<%= image_tag ("https://static.vecteezy.com/system/resources/previews/000/228/364/original/vector-isometric-teamwork-illustration.jpg"), class: "img-fluid" %>
+			<div class="col-md-6 col-sm-12 fondo">
+				<%= image_tag ("hero/hero1.png"), class: "img-fluid" %>
 			</div>
 		</div>
 	</div>
