--- a/app/views/pages/_uses_cases.html.erb
+++ b/app/views/pages/_uses_cases.html.erb
@@ -19,7 +19,7 @@
 						      <img src="https://image.freepik.com/foto-gratis/fondo-hojas-verdes-tropicales_53876-88891.jpg" alt="Los Angeles" width="100%" height="auto">				    			
 				    		</div>
 				    		<div class="col-md-6">
-						      <div class="">
+						      <div class="container-text">
 						        <h3>Bogota Piensa Digital</h3>
 						        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita amet corrupti delectus, est rem ipsam facilis quisquam vero, ab molestiae provident veritatis voluptas. Vero itaque optio qui suscipit, et corporis?</p>
 						      </div>   				    			
@@ -32,7 +32,7 @@
 						      <img src="https://image.freepik.com/foto-gratis/fondo-hojas-verdes-tropicales_53876-88891.jpg" alt="Los Angeles" width="100%" height="auto">				    			
 				    		</div>
 				    		<div class="col-md-6">
-						      <div class="">
+						      <div class="container-text">
 						        <h3>Bogota Piensa Digital</h3>
 						        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita amet corrupti delectus, est rem ipsam facilis quisquam vero, ab molestiae provident veritatis voluptas. Vero itaque optio qui suscipit, et corporis?</p>
 						      </div>   				    			
@@ -45,7 +45,7 @@
 						      <img src="https://image.freepik.com/foto-gratis/fondo-hojas-verdes-tropicales_53876-88891.jpg" alt="Los Angeles" width="100%" height="auto">				    			
 				    		</div>
 				    		<div class="col-md-6">
-						      <div class="">
+						      <div class="container-text">
 						        <h3>Bogota Piensa Digital</h3>
 						        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita amet corrupti delectus, est rem ipsam facilis quisquam vero, ab molestiae provident veritatis voluptas. Vero itaque optio qui suscipit, et corporis?</p>
 						      </div>   				    			
@@ -58,7 +58,7 @@
 						      <img src="https://image.freepik.com/foto-gratis/fondo-hojas-verdes-tropicales_53876-88891.jpg" alt="Los Angeles" width="100%" height="auto">				    			
 				    		</div>
 				    		<div class="col-md-6">
-						      <div class="">
+						      <div class="container-text">
 						        <h3>Bogota Piensa Digital</h3>
 						        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita amet corrupti delectus, est rem ipsam facilis quisquam vero, ab molestiae provident veritatis voluptas. Vero itaque optio qui suscipit, et corporis?</p>
 						      </div>   				    			
@@ -71,7 +71,7 @@
 						      <img src="https://image.freepik.com/foto-gratis/fondo-hojas-verdes-tropicales_53876-88891.jpg" alt="Los Angeles" width="100%" height="auto">				    			
 				    		</div>
 				    		<div class="col-md-6">
-						      <div class="">
+						      <div class="container-text">
 						        <h3>Bogota Piensa Digital</h3>
 						        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita amet corrupti delectus, est rem ipsam facilis quisquam vero, ab molestiae provident veritatis voluptas. Vero itaque optio qui suscipit, et corporis?</p>
 						      </div>   				    			
@@ -84,7 +84,7 @@
 						      <img src="https://image.freepik.com/foto-gratis/fondo-hojas-verdes-tropicales_53876-88891.jpg" alt="Los Angeles" width="100%" height="auto">				    			
 				    		</div>
 				    		<div class="col-md-6">
-						      <div class="">
+						      <div class="container-text">
 						        <h3>Bogota Piensa Digital</h3>
 						        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita amet corrupti delectus, est rem ipsam facilis quisquam vero, ab molestiae provident veritatis voluptas. Vero itaque optio qui suscipit, et corporis?</p>
 						      </div>   				    			
@@ -97,46 +97,23 @@
 				</div>
 			</div>
 		</div>
-		<div class="slider">
-			<ul class="carousel-indicators">
+		<br>
+			<ul class="carousel-indicators2">
 				<li data-target="#demo" data-slide-to="0" class="active">
-				  <%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>	
+				  <%= image_tag("customers/apc_logo.png", style: "width: 90px",class: "img-fluid") %>
 				</li>
 				<li data-target="#demo" data-slide-to="1">
-				 	<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
+				 	<%= image_tag("customers/giz-logo.png", class: "img-fluid") %>
 				</li>
 				<li data-target="#demo" data-slide-to="2">
-				 	<%= image_tag("customers/Mincomercio_Colombia.svg", class: "img-fluid") %>
+				 	<%= image_tag("customers/ptp_logo.png",  class: "img-fluid") %>
 				</li>
 				<li data-target="#demo" data-slide-to="3">
-				 	<%= image_tag("customers/logo-utp.png", class: "img-fluid") %>
+				 	<%= image_tag("customers/hs_logo.png" ,style: "width: 160px ",class: "img-fluid") %>
 				</li>
 				<li data-target="#demo" data-slide-to="4">
-				<%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>	   
-				</li>
-				<li data-target="#demo" data-slide-to="5">
-				 	<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
-				</li>
-
-				<li data-target="#demo" data-slide-to="0" class="active">
-				  <%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>	
-				</li>
-				<li data-target="#demo" data-slide-to="1">
-				 	<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
-				</li>
-				<li data-target="#demo" data-slide-to="2">
-				 	<%= image_tag("customers/Mincomercio_Colombia.svg", class: "img-fluid") %>
-				</li>
-				<li data-target="#demo" data-slide-to="3">
-				 	<%= image_tag("customers/logo-utp.png", class: "img-fluid") %>
-				</li>
-				<li data-target="#demo" data-slide-to="4">
-				<%= image_tag("customers/Fedesoft4.png", class: "img-fluid") %>	   
-				</li>
-				<li data-target="#demo" data-slide-to="5">
-				 	<%= image_tag("customers/GIZ-logo.jpg", class: "img-fluid") %>
+					<%= image_tag("customers/logo_fede.png" ,class: "img-fluid") %>
 				</li>
 			</ul>
-		</div>
 	</div>
 </section>
