--- a/app/assets/stylesheets/bootstrap_override.scss
+++ b/app/assets/stylesheets/bootstrap_override.scss
@@ -409,8 +409,8 @@ $table-border-level:          -6 !default;
 //
 // Shared variables that are reassigned to `$input-` and `$btn-` specific variables.
 
-$input-btn-padding-y:         .375rem !default;
-$input-btn-padding-x:         .75rem !default;
+$input-btn-padding-y:         0.20rem !default;
+$input-btn-padding-x:         0.80rem !default;
 $input-btn-font-size:         $font-size-base !default;
 $input-btn-line-height:       $line-height-base !default;
 
