--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -27,6 +27,26 @@
 	}
 }
 
+.carousel-indicators2{
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: 15;
+	display: flex;
+	justify-content: space-between;
+	padding-left: 0;
+	list-style: none;
+	li{
+		display: flex;
+		justify-content: center;
+		flex-direction: column;
+		cursor: pointer;
+		img{
+			width: 100px
+		}
+	}
+}
+
 @keyframes cambio{
 	0%{
 		margin-left: 0%;
