--- a/app/assets/stylesheets/home/about.sass
+++ b/app/assets/stylesheets/home/about.sass
@@ -3,11 +3,18 @@
 	display: flex
 	justify-content: center
 	flex-direction: column
-	.container-icon
-		max-width: 100%
-		max-height: 100%
-		img
-			max-width: 100%
+	.container-icons
+		p
+			margin: 10px 0px
+			text-align: center
+			font-size: 15px
+		.container-icon
+			display: flex
+			justify-content: center
+
+			img
+				width: 75px
+				height: 75px
 
 /* ===================== Responsive Movil ============================ */
 
@@ -19,7 +26,7 @@
 		.col-sm-12
 			margin: 20px 0px
 			img
-				width: 50%
+				width: 30%
 
 /*====================== Responsive Laptop ===========================*/
 @media screen and (max-width:1024px) and(min-width: 769px)
