--- a/app/assets/stylesheets/home/customers.sass
+++ b/app/assets/stylesheets/home/customers.sass
@@ -1,7 +1,17 @@
 .section__home-customers
 	height: 500px
+	.col-md-3
+		display: flex
+		justify-content: center
+		flex-direction: column
+		text-align: center
+		img
+			max-width: 150px
+			height: 65px
+			margin: auto
 	.container-text
 		margin: 40px
+
 
 /* ===================== Responsive Movil ============================ */
 
